# ez_nb

./: .gitignore  Cargo.toml  README.md  flake.nix  main.py  notebook.py  pyproject.toml  search.py
.cache/nix/: fetcher-cache-v4.sqlite
src/: check.rs  cli.rs  config.rs  edit.rs  insert.rs  list.rs  main.rs  remove.rs  replace.rs  roll.rs  search.rs  sync.rs  utils.rs
src-python/notebook/: __init__.py  cli.py  notes.py  search.py
src/notebook/: cli.py  notes.py
