[project]
name = "notebook"
version = "0.1.0"
description = "Notebook cli"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
notebook = "notebook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook"]
